k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jobban
  namespace: jobban
  labels:
    app: jobban
spec:
  type: ClusterIP
  selector:
    app: jobban
  ports:
    - port: 80
      targetPort: 4000
